[project]
name = "flux-batch"
dynamic = ["version"]
description = "Batch image processing with FLUX.2 klein Q4 GGUF, HiDream-O1-Image, or Boogu-Image-0.1-Edit"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chris McKenzie", email = "kristopolous@yahoo.com" },
]
requires-python = ">=3.10"
keywords = ["flux", "flux2", "flux-klein", "image-generation", "batch", "gguf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.5.0",
    "torchvision",
    "diffusers>=0.33.0",
    "gguf",
    "bitsandbytes",
    "transformers",
    "accelerate",
    "mediapipe",
    "opencv-python",
    "peft",
    "einops",
    "tqdm",
    "scipy",
    "flash-attn",
]

[project.urls]
Homepage = "https://github.com/kristopolous/flux-batch"
Repository = "https://github.com/kristopolous/flux-batch.git"
"Bug Tracker" = "https://github.com/kristopolous/flux-batch/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.setuptools]
scripts = ["flux-batch"]
